tracesplit changes to accept "hwgzip" extension

--- a/lib/libtrace.h.in
+++ b/lib/libtrace.h.in
@@ -1368,6 +1368,7 @@ typedef enum {
 	TRACE_OPTION_COMPRESSTYPE_BZ2  = 2, /**< BZip2 Compression */
 	TRACE_OPTION_COMPRESSTYPE_LZO  = 3,  /**< LZO Compression */
 	TRACE_OPTION_COMPRESSTYPE_LZMA  = 4,  /**< LZO Compression */
+	TRACE_OPTION_COMPRESSTYPE_HWZLIB  = 5,  /**< HWZLIB Compression */
         TRACE_OPTION_COMPRESSTYPE_LAST
 } trace_option_compresstype_t;
 
