First bits of code for an ETSI live format
Will probably remove the dependencies on the ASN.1 stuff
soon, but chucking it all in for now just so everything will
compile nicely.

--- a/lib/libtrace.h.in
+++ b/lib/libtrace.h.in
@@ -402,6 +402,7 @@ enum base_format_t {
         TRACE_FORMAT_PCAPNG       =23,    /**< PCAP-NG trace file */
         TRACE_FORMAT_NDAG         =24,    /**< DAG multicast over a network */
 	TRACE_FORMAT_DPDK_NDAG    =25,    /**< DAG multicast over a network, received via DPDK */
+        TRACE_FORMAT_ETSILIVE     =26     /**< ETSI LI over a network */
 };
 
 /** RT protocol packet types */
