--- a/libpacketdump/Makefile.am
+++ b/libpacketdump/Makefile.am
@@ -60,6 +60,9 @@ BIN_PROTOCOLS+=link_15.la
 # 17: PPP
 TXT_PROTOCOLS+=link_17.protocol
 
+# 21: ETSI LI
+BIN_PROTOCOLS+=link_21.la
+
 # Decoders for various ethertypes (in decimal)
 # IPv4
 BIN_PROTOCOLS+=eth_0.la
@@ -134,6 +137,7 @@ link_9_la_LDFLAGS=$(modflags)
 link_10_la_LDFLAGS=$(modflags)
 link_11_la_LDFLAGS=$(modflags)
 link_15_la_LDFLAGS=$(modflags) 
+link_21_la_LDFLAGS=$(modflags) 
 eth_0_la_LDFLAGS=$(modflags)
 eth_2048_la_LDFLAGS=$(modflags)
 eth_2054_la_LDFLAGS=$(modflags)
