Add back in some missing ETSILI constants.
These seem to have been lost when rebasing back onto the develop
branch.

--- a/lib/libtrace.h.in
+++ b/lib/libtrace.h.in
@@ -369,7 +369,8 @@ typedef enum {
        TRACE_TYPE_METADATA = 18,     	/**< WDCAP-style meta-data */
        TRACE_TYPE_NONDATA = 19,		/**< Not a data packet */
        TRACE_TYPE_OPENBSD_LOOP = 20,	/**< OpenBSD loopback */
-       TRACE_TYPE_ERF_META = 21 /**< ERF Provenance metadata record */
+       TRACE_TYPE_ERF_META = 21, /**< ERF Provenance metadata record */
+       TRACE_TYPE_ETSILI = 22	/**< ETSI Lawful Intercept */
 } libtrace_linktype_t;
 
 /** RT protocol base format identifiers.
@@ -462,6 +463,8 @@ typedef enum {
 	TRACE_RT_DATA_KAFKA=TRACE_RT_DATA_SIMPLE+TRACE_FORMAT_KAFKA,
 	TRACE_RT_DATA_ACCE=TRACE_RT_DATA_SIMPLE+TRACE_FORMAT_ACCE,
 	TRACE_RT_DATA_SPDK=TRACE_RT_DATA_SIMPLE+TRACE_FORMAT_SPDK,
+
+        TRACE_RT_DATA_ETSILI = TRACE_RT_DATA_SIMPLE + TRACE_FORMAT_ETSILIVE,
 
 	/** As PCAP does not store the linktype with the packet, we need to 
 	 * create a separate RT type for each supported DLT, starting from
