--- a/configure.in
+++ b/configure.in
@@ -121,8 +121,8 @@ AC_PROG_LIBTOOL
 AC_PROG_GCC_TRADITIONAL
 
 # Fail if any of these functions are missing
-AC_CHECK_DECLS([socket, strdup, strlcpy, strcasecmp, strncasecmp, snprintf, vsnprintf, recvmmsg, strndup])
-
+AC_CHECK_DECLS([strdup, strlcpy, strcasecmp, strncasecmp, snprintf, vsnprintf, strndup])
+AC_CHECK_DECLS([socket, recvmmsg], [], [], [[#include <sys/socket.h>]])
 AC_CHECK_SIZEOF([long int])
 
 
