Update packaging to correctly build DPDK-compatible libtrace
 * update rules to set --with-dpdk when running ./configure
 * update dependencies to use dpdk-dev instead of libdpdk-dev

--- a/debian/rules
+++ b/debian/rules
@@ -29,6 +29,7 @@ configure-stamp: configure
 
 	./configure $(CONFFLAGS) \
 		   --prefix=/usr \
+                   --with-dpdk=yes \
 		   --mandir=\$${prefix}/share/man \
 		   --infodir=\$${prefix}/share/info
 
