--- a/lib/libtrace.h.in
+++ b/lib/libtrace.h.in
@@ -319,8 +319,10 @@ enum {
 	TRACE_ERR_NULL_PACKET = -17,
 	/** Filter is NULL **/
 	TRACE_ERR_NULL_FILTER = -18,
-	/** Unable to lock/unlock mutex **/
-	TRACE_ERR_MUTEX = -19
+	/** Buffer is NULL **/
+	TRACE_ERR_NULL_BUFFER = -19,
+	/** Trace err stat **/
+	TRACE_ERR_STAT = -20,
 };
 
 /** Enumeration of DLTs supported by libtrace 
