--- a/configure.in
+++ b/configure.in
@@ -122,7 +122,8 @@ AC_PROG_GCC_TRADITIONAL
 
 # Fail if any of these functions are missing
 AC_CHECK_DECLS([strdup, strlcpy, strcasecmp, strncasecmp, snprintf, vsnprintf, strndup])
-AC_CHECK_DECLS([socket, recvmmsg], [], [], [[#include <sys/socket.h>]])
+AC_CHECK_DECLS([socket, recvmmsg], [], [], [[#define _GNU_SOURCE 1
+#include <sys/socket.h>]])
 AC_CHECK_SIZEOF([long int])
 
 
